--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -3,7 +3,7 @@
         
         <div id="main-banner-image">
             <a class="banner-image" href="">
-                <img alt="" class="left-banner-image" src="{{ site.baseurl }}/assets/images/publications/"/>
+                <img alt="" class="left-banner-image"/>
                 <span id="left-banner-image-title" class="banner-image-title"></span>
             </a>
         </div>
@@ -11,13 +11,13 @@
         <div id="top-right-banner-image">
             <a class="banner-image" href="">
                 <span id="top-right-banner-image-title" class="banner-image-title"></span>
-                <img alt="" class="top-right-banner-image" src="{{ site.baseurl }}/assets/images/publications/">
+                <img alt="" class="top-right-banner-image">
             </a>
         </div>
 
         <div id="bottom-right-banner-image">
             <a class="banner-image" href="">
-                <img alt="" class="bottom-right-banner-image" src="{{ site.baseurl }}/assets/images/publications/">
+                <img alt="" class="bottom-right-banner-image">
                 <span id="bottom-right-banner-image-title" class="banner-image-title"></span>
             </a>
         </div>
@@ -34,23 +34,12 @@
                 i++;
                 var bannerImg = document.querySelector(id + " img");
                 bannerImg.alt = pub.shortname;
-                bannerImg.src += pub.image_large;
+                bannerImg.src = "{{ site.baseurl }}/assets/images/publications/" + pub.image_large;
 
-                var bannerLink = document.querySelector(id + "  a")
+                var bannerLink = document.querySelector(id + "  a");
                 bannerLink.href = pub.url;
                 
-                // // shorten title of too long
-                // var titleLength = -1;
-                // if(i == 1){
-                //     titleLength = 66;
-                // }else{
-                //     titleLength = 30;
-                // }
-                // if(pub.title.length > titleLength){
-                //     pub.title = pub.title.substring(0, titleLength) + "...";
-                // }
-                
-                var bannerText = document.querySelector(id + " span")
+                var bannerText = document.querySelector(id + " span");
                 bannerText.innerText = pub.title;
             });
 
