--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -71,11 +71,11 @@
     <div class="footer-content">
         <div class="footer-disclaimer">
             <p>
-                Copyright &copy; 2016-2018 The Visualization Design Lab. All content on this website is licensed under
-                the <br/>
+                Copyright &copy; 2016-{{ site.time | date: '%Y' }} The Visualization Design Lab. All content on this website is licensed under
+                the
                 <a href="http://creativecommons.org/licenses/by/4.0/legalcode">Creative Commons Attribution license
-                    (CC BY)</a>. Copyright of the linked publications is with the publishers. Logo by <a
-                    href="http://www.antarctic-design.co.uk">Antarctic Design</a>.
+                    (CC BY)</a>. <br/> Copyright of the linked publications is with the publishers. Logo by <a
+                    href="http://www.antarctic-design.co.uk">Antarctic Design</a>. Last updated on {{ site.time | date: '%B %d, %Y' }}
             </p>
         </div>
 
