--- a/_layouts/person.html
+++ b/_layouts/person.html
@@ -234,6 +234,17 @@ layout: default
     {% if hastalks == "true" %}
 
         <h2 id="talks">Talks</h2>
+
+         <h3>Keynotes</h3>
+        {% for talk in site.talks reversed %}
+        {% if talk.speaker == page.key %}
+        {% if talk.type == "keynote" %}
+        {% include talk_entry.html %}
+        {% endif %}
+        {% endif %}
+        {% endfor %}
+
+
         <h3>Invited Talks</h3>
         {% for talk in site.talks reversed %}
         {% if talk.speaker == page.key %}
