updates to talks

--- a/_layouts/person.html
+++ b/_layouts/person.html
@@ -235,7 +235,7 @@ layout: default
 
         <h2 id="talks">Talks</h2>
 
-         <h3>Keynotes</h3>
+         <h3>Keynote Talks</h3>
         {% for talk in site.talks reversed %}
         {% if talk.speaker == page.key %}
         {% if talk.type == "keynote" %}
