moved dewy to alumnis; visitor to visitors

--- a/_layouts/team.html
+++ b/_layouts/team.html
@@ -61,7 +61,7 @@ layout: default
 
        {% if visitor == 'true' %}
       <p class="space">&nbsp;</p>
-      <h1>Visitor</h1>
+      <h1>Visitors</h1>
       {% include person.html role="visitor" %}
       {% endif %}
 
