added office hours to personal site

--- a/_layouts/person.html
+++ b/_layouts/person.html
@@ -137,6 +137,11 @@ layout: default
         {% if page.github %}
         <a href="{{page.github}}"><i class="fa fa-github"></i> GitHub</a><br>
         {% endif %}
+        {% if page.office-hours %}
+        <br>
+        Office Hours: {{page.office-hours}} <br>
+        (during fall/spring term only)
+        {% endif %}
     </p>
 </div>
 
