--- a/_includes/video_entry.html
+++ b/_includes/video_entry.html
@@ -6,15 +6,25 @@ Usage: {% include video_entry.html video=video_object %}
       <p><b>{{include.video.name}}</b></p>
       {% if include.video.youtube-id %}
       <div class="video-wrapper">
-        <iframe width="853" height="480" src="//www.youtube.com/embed/{{include.video.youtube-id}}?controls=2&showinfo=0&iv_load_policy=3" allowfullscreen></iframe>
+            <iframe width="853" height="480" src="https://www.youtube.com/embed/{{include.video.youtube-id}}" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
       {% endif %}
+
       {% if include.video.vimeo-id %}
       <div class="video-wrapper">
         <iframe width="853" height="480" src="https://player.vimeo.com/video/{{include.video.vimeo-id}}" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
       </div>
       {% endif %}
+
       {% if include.video.file %}
       <p><i class="fa fa-download"></i> &nbsp;<a href="{{site.paper_content_url}}{{include.video.file}}">Download Video</a></p>
       {% endif %}
-    </div>
+
+
+
+
+</div>
+
+
+
+
