--- a/_layouts/person.html
+++ b/_layouts/person.html
@@ -297,9 +297,17 @@ layout: default
         {% include students.html students=page.phd_rotation_students %}
         {% endif %}
 
+        {% if page.ms_students %}
         <h3>Current MS Students</h3>
 
         {% include students.html students=page.ms_students %}
+        {% endif %}
+
+        {% if page.ug_students %}
+        <h3>Current Undergraduate Students</h3>
+
+        {% include students.html students=page.ug_students %}
+        {% endif %}
 
         <h3>Former Students</h3>
 
