tunig layout on the publications page

--- a/_layouts/publication.html
+++ b/_layouts/publication.html
@@ -120,6 +120,8 @@ layout: default
 
   </article>
 
+  <!-- Side-Bar -->
+
   <article class="publication-content-aside">
      <!-- If we don't have a large picture, we display the small one here -->
     {% if page.image_large %}
