--- a/css/site.scss
+++ b/css/site.scss
@@ -316,7 +316,7 @@ body {
   @include omega();
   color: $color;
   //background-color: tint($color,95%);
-  padding: 30px 0px 0px 0px;
+  padding: 0px 0px 0px 0px;
   //border-bottom: 4px $color solid;
   margin-bottom: 20px;
 
@@ -1125,7 +1125,11 @@ iframe {
   }
 
   h1 {
-    padding-top: 15px;
+    padding-top: 0px;
+
+  }
+  h1:first-child {
+    margin-top: 0px;
   }
 
   .video {
