--- a/_layouts/publications.html
+++ b/_layouts/publications.html
@@ -7,21 +7,26 @@ layout: default
 
   <article class="publications-content">
 
-    <h1>Preprints</h1>
     {% assign publications = site.publications | sort: 'year' %}
     {% assign publications = publications | sort: 'order' %}
 
-    {% for publication in publications reversed %}
-      {% if publication.personal %}
-      {% elsif publication.type == "preprint" %}
-        {% include publication_list_entry.html %}
+    {% for pub in site.publications %}
+      {% if pub.type == 'preprint' %}
+        {% assign haspreprints = true %}
       {% endif %}
     {% endfor %}
 
+    {% if haspreprints %}
+      <h1>Preprints</h1>
+      {% for publication in publications reversed %}
+        {% if publication.personal %}
+        {% elsif publication.type == 'preprint' %}
+          {% include publication_list_entry.html %}
+        {% endif %}
+      {% endfor %}
+    {% endif %}
 
     <h1>Peer-Reviewed Journal and Conference Papers </h1>
-
-
 
     {% for publication in publications reversed %}
       {% if publication.personal %}
